--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,16 @@ description = "Some useful python tools"
 authors = ["ysd <helloysd@foxmail.com>"]
 
 [tool.poetry.dependencies]
-python = ">3.7"
+python = ">3.7,<4.0"
 
 [tool.poetry.dev-dependencies]
+pytest = "^6.2.2"
+pytest-cov = "^2.11.1"
+black = "^20.8b1"
+isort = "^5.8.0"
+flake8 = "^3.9.0"
+bandit = "^1.7.0"
+safety = "^1.10.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
