add test for ysdlog

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,3 +20,6 @@ safety = "^1.10.3"
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
+[tool.pytest.ini_options]
+log_cli = true
+log_level = "DEBUG"
