update bandit command line args

--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -53,6 +53,6 @@ jobs:
       - name: Run flake8
         run: poetry run flake8 .
       - name: Run bandit
-        run: poetry run bandit .
+        run: poetry run bandit -r . -x ./tests,./docs
       - name: Run saftey
         run: poetry run safety check
