--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,10 @@ paho-mqtt = "^1.5.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+pytest-cov = "^2.11.1"
+flake8 = "^3.9.0"
+bandit = "^1.7.0"
+safety = "^1.10.3"
 sphinx = "^4.2.0"
 sphinx-argparse = "^0.3.1"
 sphinx-rtd-theme = "^1.0.0"
