--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,5 +1,8 @@
-name: Release
+name: Deploy
 on:
+  push:
+    tags:
+      - v*
   release:
     types:
       - created
@@ -10,7 +13,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [3.8]
-        poetry-version: [1.1.5]
+        poetry-version: [1.1.8]
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
