disable flake8 in ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,8 +52,12 @@ jobs:
           poetry-version: ${{ matrix.poetry-version }}
       - name: Install dependencies
         run: poetry install
-      - name: Run flake8
-        run: poetry run flake8 .
+#      - name: Run black
+#        run: poetry run black . --check
+#      - name: Run isort
+#        run: poetry run isort . --check-only
+#      - name: Run flake8
+#        run: poetry run flake8 .
       - name: Run bandit
         run: poetry run bandit -r . -x ./tests,./docs
       - name: Run saftey
