--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,9 @@ paho-mqtt = "^1.5.1"
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 pytest-cov = "^2.11.1"
-flake8 = "^3.9.0"
+#black = "^20.8b1"
+#isort = "^5.8.0"
+#flake8 = "^3.9.0"
 bandit = "^1.7.0"
 safety = "^1.10.3"
 sphinx = "^4.2.0"
