--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,6 +59,6 @@ jobs:
 #      - name: Run flake8
 #        run: poetry run flake8 .
       - name: Run bandit
-        run: poetry run bandit -r . -x ./tests,./docs
+        run: poetry run bandit -r . -x ./tests,./docs,./.venv,./venv
       - name: Run saftey
         run: poetry run safety check
