--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pymodbus = "^2.5.2"
 paho-mqtt = "^1.5.1"
 
 [tool.poetry.dev-dependencies]
+pip = "^21.2"
 pytest = "^5.2"
 pytest-cov = "^2.11.1"
 #black = "^20.8b1"
