--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,21 @@
 version: '2'
 
-volumes:
-  mosquitto-data:
+# volumes:
+#   mosquitto-data:
 
 services:
   modpoll:
     build: .
     container_name: modpoll
-    depends_on:
-      - mosquitto
-    command: modpoll --tcp 192.168.0.10 --config examples/scpms6.csv --mqtt-host mosquitto
-  mosquitto:
-    image: helloysd/mosquitto:2.0.11
-    container_name: mosquitto
-    restart: unless-stopped
-    volumes:
-      - mosquitto-data:/mosquitto
-    ports:
-      - 1883:1883
+    # depends_on:
+    #   - mosquitto
+    command: --help
+    # command: --tcp 192.168.0.10 --config examples/scpms6.csv --mqtt-host mosquitto
+  # mosquitto:
+  #   image: helloysd/mosquitto:2.0.11
+  #   container_name: mosquitto
+  #   restart: unless-stopped
+  #   volumes:
+  #     - mosquitto-data:/mosquitto
+  #   ports:
+  #     - 1883:1883
