--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "A new modpoll tool for modbus communication"
 authors = ["Ying Shaodong <helloysd@foxmail.com>"]
 readme = "README.md"
 homepage = "https://helloysd.gitlab.io/modpoll"
-repository = "https://gitlab.com/helloysd/modpoll"
+repository = "https://github.com/gavinying/modpoll"
 license = "MIT"
 include = [
   "LICENSE",
