fix python version

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -83,6 +83,7 @@ dockerhub:
     - |
       docker buildx build \
         --build-arg "APP_TAG=$APP_TAG" \
+        --build-arg "PYTHON_TAG=$PYTHON_TAG" \
         --platform linux/amd64,linux/arm64,linux/arm/v7 \
         --tag "$DOCKER_REGISTRY/$DOCKER_REGISTRY_USERNAME/$APP_NAME:$APP_TAG" \
         --tag "$DOCKER_REGISTRY/$DOCKER_REGISTRY_USERNAME/$APP_NAME:latest" \
