--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "modpoll"
-version = "0.3.6"
+version = "0.3.7"
 description = "A new modpoll tool for modbus communication"
 authors = ["Ying Shaodong <helloysd@foxmail.com>"]
 readme = "README.md"
@@ -18,6 +18,7 @@ importlib-metadata = {version = "^1.0", python = "<3.8"}
 pymodbus = "^2.5.2"
 paho-mqtt = "^1.5.1"
 prettytable = "^2.2.0"
+requests = "^2.26.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
