--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -74,6 +74,16 @@ pages:
 
 dockerhub:
   stage: deploy-docker
+  variables:
+    # required by docker:dind
+    DOCKER_VERSION: "19.03.12"
+    DOCKER_HOST: tcp://docker:2375/
+    DOCKER_TLS_CERTDIR: ""
+    DOCKER_DRIVER: overlay2
+    DOCKER_CLI_EXPERIMENTAL: enabled
+  image: helloysd/docker-buildx:$DOCKER_VERSION
+  services:
+    - docker:$DOCKER_VERSION-dind
   before_script:
     # adjusted due to gitlab ci's issue: https://github.com/docker/buildx/issues/584
     - docker run --rm --privileged multiarch/qemu-user-static --reset -p yes; docker buildx create --name mybuilder --use
