--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,21 +12,24 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.8"
-importlib-metadata = {version = "^1.0", python = "<3.8"}
+python = ">=3.8.2,<4.0"
 pymodbus = "^3.2.2"
 paho-mqtt = "^1.6.1"
 prettytable = "^3.6.0"
 requests = "^2.28.1"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
 pytest-cov = "^4.0.0"
+black = "^23.7.0"
+isort = "^5.12.0"
+flake8 = "^6.0.0"
 bandit = "^1.7.4"
 safety = "^2.3.0"
 sphinx = "^4.2.0"
 sphinx-argparse = "^0.3.1"
 sphinx-rtd-theme = "^1.0.0"
+pre-commit = "^3.3.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
