--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,4 +4,6 @@ services:
   modpoll:
     build: .
     container_name: modpoll
-    command: modpoll --tcp modsim.topmaker.net --config https://raw.githubusercontent.com/gavinying/modpoll/master/examples/modsim.csv
+    command: >
+      modpoll -d --tcp modsim.topmaker.net
+        --config https://raw.githubusercontent.com/gavinying/modpoll/master/examples/modsim.csv
