--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "modpoll"
 version = "0.7.1"
-description = "A New Command Line Tool for Modbus"
+description = "A New Command-line Tool for Modbus and MQTT"
 authors = ["Ying Shaodong <helloysd@gmail.com>"]
 readme = "README.md"
 homepage = "https://helloysd.gitlab.io/modpoll"
