--- a/.github/workflows/on-release-main.yml
+++ b/.github/workflows/on-release-main.yml
@@ -44,6 +44,7 @@ jobs:
 
       - name: Build and push Docker image
         env:
+          DOCKER_REGISTRY: ${{ vars.DOCKER_REGISTRY }}
           DOCKER_USERNAME: ${{ vars.DOCKER_USERNAME }}
           IMAGE_NAME: modpoll
         run: |
