chore: add draft option

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -2,7 +2,8 @@
   "packages": {
     ".": {
       "release-type": "python",
-      "include-v-in-tag": false
+      "include-v-in-tag": false,
+      "draft": false
     }
   }
 }
