--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,8 @@ jobs:
       - name: Check out
         uses: actions/checkout@v4
 
-      - name: Set up the environment
-        uses: ./.github/actions/setup-env
+      - name: Set up poetry
+        uses: ./.github/actions/setup-poetry
 
       - name: Run checks
         run: make check
@@ -57,8 +57,11 @@ jobs:
       - name: Check out
         uses: actions/checkout@v4
 
-      - name: Set up the environment
-        uses: ./.github/actions/setup-env
+      - name: Set up poetry
+        uses: ./.github/actions/setup-poetry
+
+      - name: Set up pandoc
+        uses: ./.github/actions/setup-pandoc
 
       - name: Build documentation
         run: make docs
