fix: duplications in ci actions

--- a/.github/actions/setup-pandoc/action.yml
+++ b/.github/actions/setup-pandoc/action.yml
@@ -10,8 +10,16 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - name: Load cached Pandoc
+      id: cached-pandoc
+      uses: actions/cache@v4
+      with:
+        path: /usr/local/bin/pandoc
+        key: pandoc-${{ runner.os }}-${{ hashFiles('.tool-versions') }}
+
     - name: Install Pandoc
+      if: steps.cached-pandoc.outputs.cache-hit != 'true'
       run: |
         sudo apt-get update
-        sudo apt-get install -y pandoc
+        sudo apt-get install -y pandoc=${{ inputs.python-version }}
       shell: bash
