--- a/.github/actions/setup-pandoc/action.yml
+++ b/.github/actions/setup-pandoc/action.yml
@@ -21,5 +21,5 @@ runs:
       if: steps.cached-pandoc.outputs.cache-hit != 'true'
       run: |
         sudo apt-get update
-        sudo apt-get install -y pandoc=${{ inputs.python-version }}
+        sudo apt-get install -y pandoc=${{ inputs.pandoc-version }}
       shell: bash
