--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: validate-pr-title
-        uses:  ytanikin/PRConventionalCommits@1.1.0
+        uses:  ytanikin/PRConventionalCommits@1.2.0
         with:
           task_types: '["feat", "fix", "docs", "test", "ci", "refactor", "perf", "chore", "revert"]'
-          add_label: 'false'
+          add_label: 'true'
