--- a/examples/1-remote-config-with-eclipse-broker/docker-compose.yml
+++ b/examples/1-remote-config-with-eclipse-broker/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     command: >
       modpoll -d --tcp modsim.topmaker.net
         --mqtt-host mqtt.eclipseprojects.io
-        --mqtt-topic-prefix modpoll/test/
+        --mqtt-publish-topic-pattern mytest/<device_name>
         --mqtt-qos 1
         --rate 30
         --timestamp
