chore: disable add_label

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -14,4 +14,4 @@ jobs:
         uses:  ytanikin/PRConventionalCommits@1.2.0
         with:
           task_types: '["feat", "fix", "docs", "test", "ci", "refactor", "perf", "chore", "revert"]'
-          add_label: 'true'
+          add_label: 'false'
