fix: Skip integration test in CI pipeline

--- a/tox.ini
+++ b/tox.ini
@@ -15,4 +15,4 @@ passenv = PYTHON_VERSION
 allowlist_externals = poetry
 commands =
     poetry install -v
-    pytest
+    poetry run pytest -m "not integration"
