chore: Update dockerhub namespace

--- a/examples/1-remote-config-with-eclipse-broker/docker-compose.yml
+++ b/examples/1-remote-config-with-eclipse-broker/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   modpoll:
-    image: helloysd/modpoll
+    image: topmaker/modpoll
     container_name: modpoll
     restart: unless-stopped
     command: >
