--- a/.github/workflows/on-release-main.yml
+++ b/.github/workflows/on-release-main.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
 
-  build-and-publish:
+  publish-pypi:
     runs-on: ubuntu-latest
     steps:
       - name: Check out
@@ -20,7 +20,7 @@ jobs:
         id: vars
         run: echo tag=${GITHUB_REF#refs/tags/} >> $GITHUB_OUTPUT
 
-      - name: Build and publish
+      - name: Build and publish to PyPI
         run: |
           source .venv/bin/activate
           poetry version $RELEASE_VERSION
@@ -28,6 +28,13 @@ jobs:
         env:
           PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
           RELEASE_VERSION: ${{ steps.vars.outputs.tag }}
+
+  publish-docker:
+    runs-on: ubuntu-latest
+    needs: build-and-publish-pypi
+    steps:
+      - name: Check out
+        uses: actions/checkout@v4
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -41,6 +48,10 @@ jobs:
           registry: ${{ vars.DOCKER_REGISTRY }}
           username: ${{ vars.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Export tag
+        id: vars
+        run: echo tag=${GITHUB_REF#refs/tags/} >> $GITHUB_OUTPUT
 
       - name: Build and push Docker images
         env:
