fix: Zsh parse error due to the special character used in mqtt-publish-topic-pattern.

--- a/examples/2-local-config-with-mosquitto-broker/docker-compose.yml
+++ b/examples/2-local-config-with-mosquitto-broker/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     command: >
       modpoll -d --tcp 192.168.133.85
         --mqtt-host mosquitto
-        --mqtt-publish-topic-pattern mytest/<device_name>/data
+        --mqtt-publish-topic-pattern mytest/{{device_name}}/data
         --mqtt-qos 1
         --rate 30
         --timestamp
