--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     command: >
       modpoll -d --tcp modsim.topmaker.net
         --mqtt-host mqtt.eclipseprojects.io
-        --mqtt-publish-topic-pattern modpoll/<device_name>
+        --mqtt-publish-topic-pattern modpoll/{{device_name}}
         --mqtt-qos 1
         --rate 10
         --timestamp
