--- a/.github/actions/setup-poetry/action.yml
+++ b/.github/actions/setup-poetry/action.yml
@@ -6,6 +6,10 @@ inputs:
     required: false
     description: "The python version to use"
     default: "3.12"
+  poetry-version:
+    required: false
+    description: "The poetry version to use"
+    default: "1.8.3"
 
 runs:
   using: "composite"
@@ -14,21 +18,29 @@ runs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ inputs.python-version }}
-
-    - name: Install Poetry
-      uses: snok/install-poetry@v1
-      with:
-        virtualenvs-in-project: true
-        plugins: poetry-plugin-export
+        cache: 'pip'
 
     - name: Load cached venv
       id: cached-poetry-dependencies
       uses: actions/cache@v4
       with:
         path: .venv
-        key: venv-${{ runner.os }}-${{ inputs.python-version }}-${{ hashFiles('poetry.lock') }}
+        key: venv-${{ runner.os }}-${{ inputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
+        restore-keys: |
+          venv-${{ runner.os }}-${{ inputs.python-version }}-
+
+    - name: Install Poetry
+      if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
+      uses: snok/install-poetry@v1
+      with:
+        version: ${{ inputs.poetry-version }}
+        virtualenvs-in-project: true
+        installer-parallel: true
+        plugins: poetry-plugin-export
 
     - name: Install dependencies
       if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
-      run: poetry install --no-interaction
+      run: |
+        poetry config virtualenvs.in-project true
+        poetry install --no-interaction --no-root
       shell: bash
