--- a/.github/actions/setup-poetry/action.yml
+++ b/.github/actions/setup-poetry/action.yml
@@ -18,7 +18,7 @@ runs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ inputs.python-version }}
-        cache: 'pip'
+        cache: "pip"
 
     - name: Install Poetry
       uses: snok/install-poetry@v1
@@ -26,7 +26,7 @@ runs:
         version: ${{ inputs.poetry-version }}
         virtualenvs-in-project: true
         installer-parallel: true
-        plugins: poetry-plugin-export
+        plugins: poetry-plugin-export==1.8.0
 
     - name: Load cached venv
       id: cached-poetry-dependencies
